--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   <button id="startBtn" style="padding: 10px 20px; font-size: 1rem; font-family: 'Abril Fatface', cursive; border: none; border-radius: 8px; background-color: #ff9a9e; color: white; cursor: pointer;">Start</button>
   <button id="restartBtn" style="padding: 10px 20px; font-size: 1rem; font-family: 'Abril Fatface', cursive; border: none; border-radius: 8px; background-color: #c2e9fb; color: black; cursor: pointer; display: none;">Restart</button>
 </div>
-<div id="scoreDisplay" style="margin-top: 20px; color: white; font-size: 1.5rem; font-family: monospace;">
+<div id="scoreDisplay" style="margin-top: 20px; color: red; font-size: 1.5rem; font-family: monospace;">
   Score: <span id="score">0</span>
 </div>
     
