--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
   <style>
     html, body {
+      <!-- BCAT Video Background Intro -->
+<section style="position: relative; height: 100vh; overflow: hidden;">
+  <video autoplay loop muted playsinline style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
+    <source src="https://raw.githubusercontent.com/Hanook01/bcat/main/uzay1.gif.mp4" type="video/mp4">
+  </video>
+
+  <div style="position: relative; z-index: 1; display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100%;">
+    <h1 style="font-size: 4rem; color: #fff; text-shadow: 2px 2px 10px #ff9a9e;">The First Birthday Meme Coin!</h1>
+    <p style="font-size: 1.5rem; color: #ccc; max-width: 600px; text-align: center; margin: 20px 0;">Born for fun. Built for the moon.</p>
+    <button onclick="document.getElementById('mainContent').scrollIntoView({ behavior: 'smooth' });" style="padding: 14px 28px; font-size: 1.2rem; font-family: 'Abril Fatface', cursive; border: none; border-radius: 12px; background: linear-gradient(45deg, #ff9a9e, #fad0c4); color: black; box-shadow: 0 0 12px rgba(255, 255, 255, 0.5); cursor: pointer;">
+      Enter the BCAT Universe
+    </button>
+  </div>
+</section>
+
+<!-- Diğer içeriklerin geldiği yer -->
+<section id="mainContent">
+  <!-- BCAT video, gif, galeri vs. buraya eklenecek -->
+</section>
+
       margin: 0;
       padding: 0;
       background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #a1c4fd, #c2e9fb);
