--- a/index.html
+++ b/index.html
@@ -7,6 +7,55 @@
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
   <style>
     html, body {
+      <!-- Yıldızlı Uzay Arka Plan -->
+<body style="margin:0; overflow:hidden; background:black;">
+  <canvas id="stars" style="position:fixed; top:0; left:0; width:100%; height:100%; z-index:-1;"></canvas>
+
+  <div style="position: relative; z-index: 1; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;">
+    <h1 style="font-size: 4rem; color: #fff; text-shadow: 2px 2px 10px #ff9a9e;">The First Birthday Meme Coin!</h1>
+    <p style="font-size: 1.5rem; color: #ccc; max-width: 600px; margin: 20px;">Born for fun. Built for the moon.</p>
+    <button onclick="document.getElementById('mainContent').scrollIntoView({ behavior: 'smooth' });"
+      style="padding: 14px 28px; font-size: 1.2rem; font-family: 'Abril Fatface', cursive; border: none; border-radius: 12px; background: linear-gradient(45deg, #ff9a9e, #fad0c4); color: black; box-shadow: 0 0 12px rgba(255, 255, 255, 0.5); cursor: pointer;">
+      Enter the BCAT Universe
+    </button>
+  </div>
+
+  <script>
+    const canvas = document.getElementById('stars');
+    const ctx = canvas.getContext('2d');
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+
+    const stars = [];
+    for (let i = 0; i < 200; i++) {
+      stars.push({
+        x: Math.random() * canvas.width,
+        y: Math.random() * canvas.height,
+        r: Math.random() * 1.5,
+      });
+    }
+
+    function drawStars() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.fillStyle = 'white';
+      stars.forEach(star => {
+        ctx.beginPath();
+        ctx.arc(star.x, star.y, star.r, 0, Math.PI * 2);
+        ctx.fill();
+      });
+      requestAnimationFrame(drawStars);
+    }
+
+    drawStars();
+  </script>
+
+  <!-- Diğer içerikler aşağıya -->
+  <section id="mainContent" style="height: 100vh; background: #111; color: white; padding: 40px;">
+    <h2 style="font-size: 2rem;">BCAT Evrenine Hoş Geldin</h2>
+    <p>Buraya hikaye, görseller, galeri vs. ekleyebiliriz.</p>
+  </section>
+</body>
+
       margin: 0;
       padding: 0;
       background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #a1c4fd, #c2e9fb);
