--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BirthdayCat</title>
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
-  <style>
-    html, body {
-      <!-- Yıldızlı Uzay Arka Plan -->
-<body style="margin:0; overflow:hidden; background:black;">
+</head>
+
+<body style="margin:0; overflow:hidden; background:black; font-family: 'Abril Fatface', cursive;">
+
+  <!-- Yıldızlı arka plan canvas -->
   <canvas id="stars" style="position:fixed; top:0; left:0; width:100%; height:100%; z-index:-1;"></canvas>
 
+  <!-- Giriş bölümü -->
   <div style="position: relative; z-index: 1; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;">
     <h1 style="font-size: 4rem; color: #fff; text-shadow: 2px 2px 10px #ff9a9e;">The First Birthday Meme Coin!</h1>
     <p style="font-size: 1.5rem; color: #ccc; max-width: 600px; margin: 20px;">Born for fun. Built for the moon.</p>
     <button onclick="document.getElementById('mainContent').scrollIntoView({ behavior: 'smooth' });"
-      style="padding: 14px 28px; font-size: 1.2rem; font-family: 'Abril Fatface', cursive; border: none; border-radius: 12px; background: linear-gradient(45deg, #ff9a9e, #fad0c4); color: black; box-shadow: 0 0 12px rgba(255, 255, 255, 0.5); cursor: pointer;">
+      style="padding: 14px 28px; font-size: 1.2rem; border: none; border-radius: 12px; background: linear-gradient(45deg, #ff9a9e, #fad0c4); color: black; box-shadow: 0 0 12px rgba(255, 255, 255, 0.5); cursor: pointer;">
       Enter the BCAT Universe
     </button>
   </div>
 
+  <!-- JavaScript: yıldız çizimi -->
   <script>
     const canvas = document.getElementById('stars');
     const ctx = canvas.getContext('2d');
@@ -49,136 +52,10 @@
     drawStars();
   </script>
 
-  <!-- Diğer içerikler aşağıya -->
-  <section id="mainContent" style="height: 100vh; background: #111; color: white; padding: 40px;">
+  <!-- Eski içeriklerin geleceği yer -->
+  <section id="mainContent" style="padding: 40px; color: white;">
     <h2 style="font-size: 2rem;">BCAT Evrenine Hoş Geldin</h2>
-    <p>Buraya hikaye, görseller, galeri vs. ekleyebiliriz.</p>
-  </section>
-</body>
-
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #a1c4fd, #c2e9fb);
-      background-size: 600% 600%;
-      animation: gradientMove 10s ease-in-out infinite;
-      font-family: 'Abril Fatface', cursive;
-    }
-
-    @keyframes gradientMove {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    #topTitle {
-      font-size: 3.5rem;
-      margin: 0;
-      animation: colorShift 8s ease-in-out infinite;
-      text-align: center;
-    }
-
-    @keyframes colorShift {
-      0% { color: #ff9a9e; }
-      25% { color: #fad0c4; }
-      50% { color: #a1c4fd; }
-      75% { color: #c2e9fb; }
-      100% { color: #ff9a9e; }
-    }
-
-    #nyanZone {
-      position: absolute;
-      top: 170px;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 99;
-    }
-
-    #nyanCat {
-      width: 240px;
-    }
-
-    #iconBar {
-      position: absolute;
-      top: 20px;
-      right: 30px;
-      display: flex;
-      gap: 20px;
-      z-index: 9999;
-    }
-
-    #iconBar a img {
-      width: 52px;
-      height: 52px;
-      transition: transform 0.3s ease, filter 0.3s ease;
-    }
-
-    #iconBar a:hover img {
-      transform: scale(1.2);
-      filter: brightness(1.3);
-    }
-
-    #soundToggle {
-      position: fixed;
-      top: 20px;
-      left: 30px;
-      z-index: 9999;
-      font-size: 1.2rem;
-      background: rgba(0,0,0,0.4);
-      color: white;
-      border: none;
-      border-radius: 8px;
-      padding: 6px 12px;
-      cursor: pointer;
-    }
-  </style>
-</head>
-<body>
-
-  <!-- ÜSTTEKİ SABİT BAR -->
-  <div id="iconBar">
-    <a href="https://t.me/YOUR_TELEGRAM" target="_blank">
-      <img src="Telegrampng.png" alt="Telegram">
-    </a>
-    <a href="https://x.com/YOUR_X" target="_blank">
-      <img src="Xpng.png" alt="X">
-    </a>
-    <a href="https://dexscreener.com" target="_blank">
-      <img src="Dexpng.png" alt="Dexscreener">
-    </a>
-    <a href="https://coingecko.com" target="_blank">
-      <img src="geckopng3.webp" alt="CoinGecko">
-    </a>
-  </div>
-
-  <button id="soundToggle">🔇</button>
-
-  <div style="display: flex; justify-content: center; align-items: center; padding-top: 40px;">
-    <div style="background: rgba(0,0,0,0.3); border-radius: 30px; padding: 20px 40px; box-shadow: 0 0 20px rgba(0,0,0,0.4);">
-      <h1 id="topTitle">Welcome BirthdayCat</h1>
-    </div>
-  </div>
-
-  <div id="nyanZone">
-    <img id="nyanCat" src="nyan-cat.gif" alt="Nyan Cat">
-  </div>
-
-  <!-- GÖRSEL ALAN -->
-  <section style="display: grid; grid-template-columns: 1fr 1.5fr 1fr; align-items: center; height: 100vh; gap: 20px; padding: 40px; box-sizing: border-box;">
-    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
-      <img src="gozluk.gif" alt="GIF1" style="width: 500px; height: 400px; border-radius: 20px;" />
-      <img src="gozluk.gif" alt="GIF2" style="width: 500px; height: 400px; border-radius: 20px;" />
-    </div>
-
-    <div style="width: 100%; height: 65%; border-radius: 20px; overflow: hidden; position: relative;">
-      <video id="bcatVideo" autoplay loop muted playsinline style="width: 100%; height: 100%; object-fit: cover; border-radius: 20px;">
-        <source src="bcat-video-fast-optimized.mp4" type="video/mp4">
-      </video>
-    </div>
-
-    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
-      <img src="gozluk.gif" alt="GIF3" style="width: 500px; height: 400px; border-radius: 20px;" />
-      <img src="gozluk.gif" alt="GIF4" style="width: 500px; height: 400px; border-radius: 20px;" />
-    </div>
+    <p>Burası senin diğer içerikleri koyacağın bölüm. Video, gif, meme galeri ne istersen buraya ekleriz.</p>
   </section>
 
 </body>
