--- a/index.html
+++ b/index.html
@@ -14,12 +14,9 @@
 
   <!-- Giriş bölümü -->
   <div style="position: relative; z-index: 1; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;">
-    <h1 style="font-size: 4rem; color: #fff; text-shadow: 2px 2px 10px #ff9a9e;">The First Birthday Meme Coin!</h1>
-    <p style="font-size: 1.5rem; color: #ccc; max-width: 600px; margin: 20px;">Born for fun. Built for the moon.</p>
-    <button onclick="document.getElementById('mainContent').scrollIntoView({ behavior: 'smooth' });"
-      style="padding: 14px 28px; font-size: 1.2rem; border: none; border-radius: 12px; background: linear-gradient(45deg, #ff9a9e, #fad0c4); color: black; box-shadow: 0 0 12px rgba(255, 255, 255, 0.5); cursor: pointer;">
-      Enter the BCAT Universe
-    </button>
+    <h1 style="font-size: 4rem; color: #fff; text-shadow: 2px 2px 10px #ff9a9e;"></h1>
+    <p style="font-size: 1.5rem; color: #ccc; max-width: 600px; margin: 20px;"></p>
+     
   </div>
 
   <!-- JavaScript: yıldız çizimi -->
