--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <!-- Eski içeriklerin geleceği yer -->
   <section id="mainContent" style="padding: 40px; color: white;">
-    <h2 style="font-size: 2rem;">BCAT Evrenine Hoş Geldin</h2>
+    <h2 style="font-size: 2rem;"></h2>
     <p>Burası senin diğer içerikleri koyacağın bölüm. Video, gif, meme galeri ne istersen buraya ekleriz.</p>
   </section>
 
